@@ -10,7 +10,15 @@ java-common (0.49) UNRELEASED; urgency=low
   [ Sylvestre Ledru ]
   * Remove local variables in the changelog
   * Update of the Debian Java FAQ (was starting to become obsolete)
-  * State the license of the policy (Closes: #687841)
+  * Update of the Java policy:
+    - Recommend default-jre & default-jre-headless for Java libraries
+    - Create a section "Building Java packages"
+      - Promote default-jdk
+      - Advice to use javahelper
+      - Recommend maven-debian-helper
+    - Remove some deprecated references to java-runtime{1,2}
+    - Minor improvements
+    - State the license of the policy (Closes: #687841)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 05 Jun 2013 14:11:41 +0200
 
